--- a/databases/sqlite3/Makefile
+++ b/databases/sqlite3/Makefile
@@ -2,10 +2,10 @@
 # $FreeBSD$
 
 PORTNAME=	sqlite3
-PORTVERSION=	3.7.14.1
+PORTVERSION=	3.7.16.1
 CATEGORIES=	databases
-MASTER_SITES=	http://www.sqlite.org/ http://www2.sqlite.org/ http://www3.sqlite.org/
-DISTNAME=	sqlite-autoconf-3071401
+MASTER_SITES=	http://www.sqlite.org/2013/ http://www2.sqlite.org/2013/ http://www3.sqlite.org/2013/
+DISTNAME=	sqlite-autoconf-3071601
 
 MAINTAINER=	pavelivolkov@gmail.com
 COMMENT=	An SQL database engine in a C library
@@ -15,7 +15,7 @@ LICENSE_NAME=	Public Domain
 LICENSE_TEXT=	Description of the license can be obtained from the following URL: http://www.sqlite.org/copyright.html
 LICENSE_PERMS=	dist-mirror dist-sell pkg-mirror pkg-sell auto-accept
 
-CONFLICTS=	sqlite34-[0-9]* sqlcipher-*
+CONFLICTS=	sqlite34-[0-9]* sqlcipher-[0-9]*
 
 USE_PKGCONFIG=	build
 USE_LDCONFIG=	YES
@@ -25,7 +25,7 @@ MAKE_JOBS_UNSAFE=	yes
 
 # Compilation Options For SQLite http://www.sqlite.org/compile.html
 OPTIONS_DEFINE=	FTS3 ICU RTREE RAMTABLE UPD_DEL_LIMIT URI SOUNDEX METADATA \
-		STAT3 DIRECT_READ MEMMAN SECURE_DELETE UNLOCK_NOTIFY THREADSAFE \
+		STAT3 DIRECT_READ MEMMAN SECURE_DELETE UNLOCK_NOTIFY SQLLOG THREADSAFE \
 		EXTENSION
 OPTIONS_DEFAULT=	FTS3 URI METADATA SECURE_DELETE UNLOCK_NOTIFY THREADSAFE EXTENSION
 FTS3_DESC=		Enable FTS3/4 (Full Text Search) module
@@ -41,6 +41,7 @@ DIRECT_READ_DESC=	File is read directly from disk
 MEMMAN_DESC=		Allows it to release unused memory
 SECURE_DELETE_DESC=	Overwrite deleted information with zeros
 UNLOCK_NOTIFY_DESC=	Enable notification on unlocking
+SQLLOG_DESC=		Allow logging operations
 THREADSAFE_DESC=	Build thread-safe library
 EXTENSION_DESC=		Allow loadable extensions
 
@@ -136,6 +137,10 @@ CPPFLAGS+=		-DSQLITE_SECURE_DELETE=1
 CPPFLAGS+=		-DSQLITE_ENABLE_UNLOCK_NOTIFY=1
 .endif
 
+.if ${PORT_OPTIONS:MSQLLOG}
+CPPFLAGS+=		-DSQLITE_ENABLE_SQLLOG=1
+.endif
+
 .if ${PORT_OPTIONS:MMETADATA}
 CPPFLAGS+=		-DSQLITE_ENABLE_COLUMN_METADATA=1
 .endif
@@ -151,6 +156,17 @@ CONFIGURE_ARGS+=	--disable-threadsafe
 CONFIGURE_ARGS+=	--enable-dynamic-extensions
 .else
 CONFIGURE_ARGS+=	--disable-dynamic-extensions
+.endif
+
+post-patch:
+	@${REINPLACE_CMD} '/^pkgconf/s,$${libdir},$${prefix}/libdata,' ${WRKSRC}/Makefile.in
+.if ${PORT_OPTIONS:MSQLLOG}
+	@${ECHO_CMD} "void sqlite3_init_sqllog(void) { /* fake function */ }" >> ${WRKSRC}/shell.c
+.endif
+
+post-build:
+.if ${ARCH}=="i386"
+	@${ECHO_MSG} "===> WARNING: on ${ARCH} don't pass atof1-* tests"
 .endif
 
 post-install:
