Fix documentation install.  Respect ${PREFIX} for installing binaries.
Reported by:    Jimmy Olgeni
Feature safe:	yes


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@315954 35697150-7ecd-e111-bb59-0022644237b5

--- a/sysutils/spiped/Makefile
+++ b/sysutils/spiped/Makefile
@@ -2,6 +2,7 @@
 
 PORTNAME=	spiped
 PORTVERSION=	1.3.1
+PORTREVISION=	1
 CATEGORIES=	sysutils security
 MASTER_SITES=	http://www.tarsnap.com/spiped/
 EXTRACT_SUFX=	.tgz
@@ -16,6 +17,9 @@ LICENSE_FILE=	${WRKSRC}/COPYRIGHT
 MAKE_ARGS=	MAN1DIR=${MANPREFIX}/man/man1
 MAN1=		spiped.1 spipe.1
 
+# Binaries go into ${PREFIX}/bin
+MAKE_ARGS+=	BINDIR=${PREFIX}/bin
+
 # Force __BSD_VISIBLE on since it works and improves performance
 MAKE_ARGS+=	CFLAGS="-O2 -D__BSD_VISIBLE"
 
@@ -24,10 +28,12 @@ PLIST_FILES=	bin/spiped bin/spipe
 
 USE_RC_SUBR=	spiped
 
+.include <bsd.port.options.mk>
+
 post-install:
-.if defined(PORT_OPTIONS:MDOCS)
+.if ${PORT_OPTIONS:MDOCS}
 	${MKDIR} ${DOCSDIR}
-	(cd ${WRKSRC} && ${INSTALL_MAN} ${DOCFILES} ${DOCSDIR})
+	(cd ${WRKSRC} && ${INSTALL_MAN} ${PORTDOCS} ${DOCSDIR})
 .endif
 
 .include <bsd.port.mk>
