--- a/devel/mico/files/patch-configure.in
+++ b/devel/mico/files/patch-configure.in
@@ -1,5 +1,5 @@
---- configure.in.orig	Sat Jul 22 15:43:10 2006
-+++ configure.in	Sat Jul 22 15:43:37 2006
+--- configure.in.orig	2006-01-21 16:12:08.000000000 +0100
++++ configure.in	2013-04-17 11:45:36.000000000 +0200
 @@ -605,7 +605,7 @@
  # System dependencies.
  #
@@ -18,3 +18,12 @@
    fi
  
    CONF_SHARED_CC="$CXX -shared"
+@@ -1082,7 +1082,7 @@
+   AC_GET_DEFINE(TCL_VERSION, TCL_VERSION, tcl.h)
+   if test X"$TCL_VERSION" != X; then
+     dnl # remove quotes if any
+-    TCL_VERSION=`echo $TCL_VERSION | tr -d \"`
++    TCL_VERSION=`echo $TCL_VERSION | tr -d \" | tr -d \.`
+     TCL_LIBS=-ltcl$TCL_VERSION
+     HAVE_TCL=yes
+     AC_MSG_RESULT($TCL_VERSION)
