convert NOPORTDOCS to PORT_OPTIONS:MDOCS Switch to desktop-file-utils uses. Remove shlib version. Fix glib.h header patch so the correct prototype is used, otherwise function  returns the wrong time [1] Move pre-configure section to post-patch.
PR:		ports/177462 [1]
PR:		ports/177564 [1]
Submitted by:	AN <andy@neu.net>
		Luiz Eduardo Roncato Cordeiro <cordeiro@cert.br>
Based on:	patch from Golyashov Sergey <svvord@ulona.org> in ports/177462
Feature safe:	yes


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@315957 35697150-7ecd-e111-bb59-0022644237b5

--- a/graphics/dia/Makefile
+++ b/graphics/dia/Makefile
@@ -4,22 +4,22 @@
 
 PORTNAME=	dia
 DISTVERSION=	0.97.2
+PORTREVISION=	1
 PORTEPOCH=	1
 CATEGORIES=	graphics gnome
 MASTER_SITES=	GNOME
 DIST_SUBDIR=	gnome2
 
-MAINTAINER?=	gnome@FreeBSD.org
+MAINTAINER=	gnome@FreeBSD.org
 COMMENT=	Diagram creation program, similar to Visio
 
 LIB_DEPENDS=	popt:${PORTSDIR}/devel/popt \
 		png15:${PORTSDIR}/graphics/png
 
-USES=		pathfix
+USES=		pathfix desktop-file-utils
 USE_XZ=		yes
 USE_GMAKE=	yes
-USE_GNOME=	gtk20 gnomeprefix libxslt libartlgpl2 intlhack \
-		desktopfileutils
+USE_GNOME=	gtk20 gnomeprefix libxslt libartlgpl2 intlhack
 INSTALLS_ICONS=	yes
 USE_GETTEXT=	yes
 GNU_CONFIGURE=	yes
@@ -28,8 +28,9 @@ CONFIGURE_ENV=	LIBS="-L${LOCALBASE}/lib -lintl" \
 CPPFLAGS+=	-I${LOCALBASE}/include
 CONFIGURE_ARGS=	--disable-gnome
 
+.include <bsd.port.options.mk>
 
-.if !defined(NOPORTDOCS)
+.if ${PORT_OPTIONS:MDOCS}
 BUILD_DEPENDS=	${LOCALBASE}/share/xsl/docbook/manpages/docbook.xsl:${PORTSDIR}/textproc/docbook-xsl
 MAN1=		dia.1
 MANLANG=	"" fr
@@ -47,7 +48,7 @@ MANLANG=	"" fr
 .include <bsd.port.pre.mk>
 
 .if ${ARCH} == "i386"
-LIB_DEPENDS+=		EMF.1:${PORTSDIR}/graphics/libemf
+LIB_DEPENDS+=		EMF:${PORTSDIR}/graphics/libemf
 CONFIGURE_ARGS+=	--enable-libemf
 PLIST_SUB+=		WMF=""
 .else
@@ -58,11 +59,12 @@ PLIST_SUB+=		WMF="@comment "
 post-patch:
 	@${REINPLACE_CMD} -e 's|/usr/local|${LOCALBASE}|g' \
 		${WRKSRC}/lib/intl.c
-	@${REINPLACE_CMD} -e 's|glib/.*\.h>|glib.h>|g' \
+	@${REINPLACE_CMD} -e 's|glib/gstrfuncs.h>|glib.h>|g' \
+		-e 's|glib/gtestutils.h|glib.h|g' \
 		${WRKSRC}/objects/custom/shape_typeinfo.c \
 		${WRKSRC}/tests/test-objects.c \
 		${WRKSRC}/tests/test-boundingbox.c
-.if defined(NOPORTDOCS)
+.if ! ${PORT_OPTIONS:MDOCS}
 	@${REINPLACE_CMD} -e '/SUBDIRS/s|data doc tests|data tests|g' \
 		${WRKSRC}/Makefile.in
 .endif
@@ -70,13 +72,8 @@ post-patch:
 		${XARGS} ${REINPLACE_CMD} -e \
 		's,\(^GTK_LIBS.*\),\1 ${PTHREAD_LIBS}, ; \
 		 s,\(^GTK_CFLAGS = \),\1 ${PTHREAD_CFLAGS} ,'
-
-pre-configure:
 	@${REINPLACE_CMD} -e 's|http://docbook.sourceforge.net/release/xsl/current/manpages/docbook.xsl|${LOCALBASE}/share/xsl/docbook/manpages/docbook.xsl| ; \
 		s|echo aout|echo elf|g ; s|/usr/include/libEMF|${LOCALBASE}/include/libEMF|g' \
 		${WRKSRC}/configure
-
-post-install:
-	@-update-desktop-database
 
 .include <bsd.port.post.mk>
