Trim header, convert OptionsNG. Switch to tcl 8.4 since 8.3 is going away soon [1]
Submitted by:	gahr@
Feature safe:	yes


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@315959 35697150-7ecd-e111-bb59-0022644237b5

--- a/irc/xchat-gnome/Makefile
+++ b/irc/xchat-gnome/Makefile
@@ -1,9 +1,5 @@
-# New ports collection makefile for:	xchat-gnome
-# Date created:			04 May 2004
-# Whom:				Koop Mast <kwm@rainbow-runner.nl>
-#
+# Created by: Koop Mast <kwm@rainbow-runner.nl>
 # $FreeBSD$
-#
 
 PORTNAME=	xchat
 PORTVERSION=	0.26.1
@@ -18,26 +14,30 @@ MAINTAINER=	kwm@FreeBSD.org
 COMMENT=	An IRC client for GNOME 2 (development version)
 
 LIB_DEPENDS=	sexy:${PORTSDIR}/x11-toolkits/libsexy \
-		canberra-gtk.0:${PORTSDIR}/audio/libcanberra \
+		canberra-gtk:${PORTSDIR}/audio/libcanberra \
 		notify:${PORTSDIR}/devel/libnotify
 
 USE_GETTEXT=	yes
 USE_BZIP2=	yes
 USE_GMAKE=	yes
-USE_GNOME=	gnomehack gnomeprefix libgnomeui gnomedocutils desktopfileutils
+USES=		pathfix desktop-file-utils
+USE_GNOME=	gnomeprefix libgnomeui gnomedocutils
 GNU_CONFIGURE=	yes
 CONFIGURE_ENV=	LIBS="-L${LOCALBASE}/lib ${PTHREAD_LIBS}"
 CPPFLAGS+=	-I${LOCALBASE}/include ${PTHREAD_CFLAGS}
-CONFIGURE_ARGS=	--disable-tcl
 GCONF_SCHEMAS=	apps_xchat.schemas notification.schemas urlscraper.schemas
 INSTALLS_ICONS=	yes
 INSTALLS_OMF=	yes
-WANT_PERL=	yes
 
 MAN1=		xchat-gnome.1
 
-.if !defined(WITHOUT_DBUS)
-LIB_DEPENDS+=	dbus-1.3:${PORTSDIR}/devel/dbus
+OPTIONS_DEFINE=	DBUS IPV6 PYTHON PERL TCL
+OPTIONS_DEFAULT=DBUS IPV6 PERL
+
+.include <bsd.port.options.mk>
+
+.if ${PORT_OPTIONS:MDBUS}
+LIB_DEPENDS+=	dbus-1:${PORTSDIR}/devel/dbus
 CONFIGURE_ARGS+=	--enable-dbus
 USE_GNOME+=	gconf2
 GCONF_SCHEMAS+=	url_handler.schemas
@@ -47,13 +47,11 @@ CONFIGURE_ARGS+=--disable-dbus
 PLIST_SUB+=	DBUS="@comment "
 .endif
 
-.if !defined(WITHOUT_IPV6)
+.if ${PORT_OPTIONS:MIPV6}
 CONFIGURE_ARGS+=	--enable-ipv6
 .endif
 
-# openssl in now default in configure
-
-.if defined(WITH_PYTHON)
+.if ${PORT_OPTIONS:MPYTHON}
 USE_PYTHON=		yes
 CONFIGURE_ARGS+=	--enable-python
 PLIST_SUB+=		PYTHON=""
@@ -62,54 +60,34 @@ CONFIGURE_ARGS+=	--disable-python
 PLIST_SUB+=		PYTHON="@comment "
 .endif
 
-.if defined(WITH_TCL)
-LIB_DEPENDS+=	tcl83.1:${PORTSDIR}/lang/tcl83
-CONFIGURE_ARGS+=--enable-tcl=${LOCALBASE}/lib/tcl8.3
+.if ${PORT_OPTIONS:MTCL}
+USE_TCL=	84
+CONFIGURE_ARGS+=--enable-tcl=${TCL_LIBDIR}
 CONFIGURE_ENV+=	LIBS="-L${LOCALBASE}/lib ${PTHREAD_LIBS} \
-		-L${LOCALBASE}/lib/tcl8.3"
+		-L${TCL_LIBDIR}"
 CPPFLAGS+=	-I${LOCALBASE}/include ${PTHREAD_CFLAGS} \
-		-I${LOCALBASE}/include/tcl8.3
+		-I${TCL_INCLUDEDIR}
 PLIST_SUB+=	TCL=""
 .else
-CONFIGURE_ARGS+=--enable-tcl=no
+CONFIGURE_ARGS+=--disable-tcl
 PLIST_SUB+=	TCL="@comment "
 .endif
 
-.include <bsd.port.pre.mk>
-
-.if defined(WITHOUT_PERL)
-CONFIGURE_ARGS+=--disable-perl
-PLIST_SUB+=	PERL="@comment "
-.else
+.if ${PORT_OPTIONS:MPERL}
 USE_PERL5=	yes
 CONFIGURE_ARGS+=--enable-perl
 PLIST_SUB+=	PERL=""
-.endif
-
-pre-everything::
-.if !defined(WITH_PYTHON) || !defined(WITH_SOCKS) || !defined(WITH_TCL)
-	@${ECHO_MSG} "You may specify the following on the command line:"
-	@${ECHO_MSG} ""
-.endif
-.if !defined(WITH_PYTHON)
-	@${ECHO_MSG} "WITH_PYTHON=yes for Python support"
-.endif
-.if !defined(WITH_SOCKS)
-	@${ECHO_MSG} "WITH_SOCKS=yes for SOCKS5 proxy support"
-.endif
-.if !defined(WITH_TCL)
-	@${ECHO_MSG} "WITH_TCL=yes for tcl support"
-.endif
-.if !defined(WITHOUT_PERL)
-	@${ECHO_MSG} "WITHOUT_PERL=yes to disable Perl support"
+.else
+CONFIGURE_ARGS+=--disable-perl
+PLIST_SUB+=	PERL="@comment "
 .endif
 
 post-patch:
 	@${REINPLACE_CMD} -E -e 's|PY_LIBS=.*|PY_LIBS="-L\$$PY_EXEC_PREFIX/lib/python\$$PY_VER/config -lpython\$$PY_VER ${PTHREAD_LIBS} -lutil"|' \
-		-e 's|tcl-8.4/lib|lib/tcl8.3|g' \
+		-e 's|tcl-8.4/lib|lib/tcl8.4|g' \
 		-e 's|-DGTK_DISABLE_DEPRECATED||g' \
 		-e 's|-DGDK_DISABLE_DEPRECATED||g' \
 		-e 's|-fgnu89-inline||g' \
 		${WRKSRC}/configure
 
-.include <bsd.port.post.mk>
+.include <bsd.port.mk>
