Mark as broken, does not build:
awgn.c: In function 'awgn_init_dbov':
awgn.c:109: error: 'cpowl' undeclared (first use in this function)
awgn.c:109: error: (Each undeclared identifier is reported only once
awgn.c:109: error: for each function it appears in.)
awgn.c:109: error: 'cpow' undeclared (first use in this function)
awgn.c:109: error: 'cpowf' undeclared (first use in this function)
awgn.c:109: error: 'powl' undeclared (first use in this function)
awgn.c: In function 'awgn':
awgn.c:165: error: 'clogl' undeclared (first use in this function)
awgn.c:165: error: 'clog' undeclared (first use in this function)
awgn.c:165: error: 'clogf' undeclared (first use in this function)
awgn.c:165: error: 'logl' undeclared (first use in this function)

Feature safe:	yes


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@315961 35697150-7ecd-e111-bb59-0022644237b5

--- a/net/freeswitch-core/Makefile
+++ b/net/freeswitch-core/Makefile
@@ -30,6 +30,8 @@ EXTRACT_ONLY=	${BASE_PORTNAME}-${PORTVERSION}.tar.gz
 MAINTAINER=	ports@FreeBSD.org
 COMMENT=	FreeSwitch SoftSwitch Port
 
+BROKEN=		Does not build
+
 LIB_DEPENDS=	curl:${PORTSDIR}/ftp/curl \
 		jpeg:${PORTSDIR}/graphics/jpeg \
 		tiff:${PORTSDIR}/graphics/tiff \
