--- a/games/cosmosmash/Makefile
+++ b/games/cosmosmash/Makefile
@@ -1,13 +1,8 @@
-# New ports collection makefile for: cosmosmash
-# Date created:                      12 Apr 2008
-# Whom:                              Ganael Laplanche <ganael.laplanche@martymac.org>
-#
+# Created by: Ganael Laplanche <ganael.laplanche@martymac.org>
 # $FreeBSD$
-#
 
 PORTNAME=	cosmosmash
-DISTVERSION=	1.4.5
-PORTREVISION=	2
+DISTVERSION=	1.4.6
 CATEGORIES=	games
 MASTER_SITES=	http://perso.b2b2c.ca/sarrazip/dev/ \
 		LOCAL/martymac
