--- a/math/R-cran-bdsmatrix/Makefile
+++ b/math/R-cran-bdsmatrix/Makefile
@@ -2,15 +2,14 @@
 # $FreeBSD$
 
 PORTNAME=	bdsmatrix
-PORTVERSION=	1.3
-PORTREVISION=	5
+DISTVERSION=	1.3-1
 CATEGORIES=	math
-DISTNAME=	${PORTNAME}_${PORTVERSION}
+DISTNAME=	${PORTNAME}_${DISTVERSION}
 
 MAINTAINER=	tota@FreeBSD.org
 COMMENT=	Routines for Block Diagonal Symmetric matrices
 
-LICENSE=	GPLv2
+LICENSE=	LGPL20
 
 USE_R_MOD=	yes
 R_MOD_AUTOPLIST=	yes
