- Mark BROKEN fails to build
I/usr/local/include -DUSE_XIM -c rbgdkcursor.c
rbgdkcursor.c:48:27: error: rbgdkcursors.h: No such file or directory
*** Error code 1

Feature safe:	yes


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@315973 35697150-7ecd-e111-bb59-0022644237b5

--- a/x11-toolkits/ruby-gtk/Makefile
+++ b/x11-toolkits/ruby-gtk/Makefile
@@ -21,6 +21,8 @@ USE_RUBY_EXTCONF=	yes
 USE_XORG=	x11
 USE_GNOME=	gtk12
 
+BROKEN=		fails to build
+
 RUBY_GNOME_VERSION=		0.34
 #RUBY_GNOME_SNAPSHOTDATE=	20010224
 .if defined(RUBY_GNOME_SNAPSHOTDATE)
