- Broken fails to build
/work/a/ports/devel/klee/work/klee-169327.138/lib/Core/Executor.cpp: In member function 'unsigned int klee::Executor::getWidthForLLVMType(llvm::Type*) const':
/work/a/ports/devel/klee/work/klee-169327.138/lib/Core/Executor.cpp:3516: error: invalid use of incomplete type 'struct llvm::TargetData'
/work/a/ports/devel/klee/work/klee-169327.138/include/klee/Internal/Module/KModule.h:27: error: forward declaration of 'struct llvm::TargetData'
*** Error code 1

Feature safe:	yes


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@315975 35697150-7ecd-e111-bb59-0022644237b5

--- a/devel/klee/Makefile
+++ b/devel/klee/Makefile
@@ -14,6 +14,8 @@ BUILD_DEPENDS=	llvm-ar:${PORTSDIR}/devel/llvm \
 RUN_DEPENDS=	llvm-ar:${PORTSDIR}/devel/llvm \
 		ccc-analyzer:${PORTSDIR}/lang/clang
 
+BROKEN=		fails to build
+
 OPTIONS_DEFINE=	DEBUG
 
 USES=		cmake:outsource
