- Broken fails to build
gjstest/internal/cpp/typed_arrays.cc: In static member function 'static v8::Persistent<v8::FunctionTemplate><unnamed>::TypedArray<TBytes, TEAType>::GetTemplate() [with unsigned int TBytes = 8u, v8::ExternalArrayType TEAType = kExternalDoubleArray]':
gjstest/internal/cpp/typed_arrays.cc:854:   instantiated from here
gjstest/internal/cpp/typed_arrays.cc:180: warning: 'New' is deprecated (declared at /usr/local/include/v8.h:4435)
gmake: *** [gjstest/internal/cpp/typed_arrays.o] Error 1
*** Error code 1

Feature safe:	yes


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@315976 35697150-7ecd-e111-bb59-0022644237b5

--- a/devel/gjstest/Makefile
+++ b/devel/gjstest/Makefile
@@ -26,6 +26,8 @@ CXXFLAGS+=	-L${LOCALBASE}/lib
 USE_BZIP2=	yes
 USE_GMAKE=	yes
 
+BROKEN=		fails to build
+
 PROJECTHOST=	google-js-test
 
 post-patch:
