- Broken fails to build
AR lib9
built lib9
CC yacc.c
LD yacc
built yacc
YACC awkgram.y

fatal error:can't create , <nil>:1
*** Error code 1

Stop in /work/a/ports/devel/9base/work/9base-2/awk.
*** Error code 1

Feature safe:	yes


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@315977 35697150-7ecd-e111-bb59-0022644237b5

--- a/devel/9base/Makefile
+++ b/devel/9base/Makefile
@@ -25,6 +25,8 @@ APPS=		awk basename bc cat cleanname date dc echo grep mk rc sed \
 MAN1=		${APPS:S|$|.1|}
 MAN7=		regexp.7
 
+BROKEN=		fails to build
+
 ONLY_FOR_ARCHS=	i386 amd64 sparc64
 ONLY_FOR_ARCHS_REASON=	has low-level code unavailable for ${ARCH}
 
