- Update to 0.8.1 - Convert to new option framework
Feature safe:	yes


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@315979 35697150-7ecd-e111-bb59-0022644237b5

--- a/devel/py-bitarray/Makefile
+++ b/devel/py-bitarray/Makefile
@@ -1,12 +1,8 @@
-# New ports collection makefile for:	py-bitarray
-# Date created:		2010-12-16
-# Whom:			Sofian Brabez <sbrabez@gmail.com>
-#
+# Created by: Sofian Brabez <sbrabez@gmail.com>
 # $FreeBSD$
-#
 
 PORTNAME=	bitarray
-PORTVERSION=	0.8.0
+PORTVERSION=	0.8.1
 CATEGORIES=	devel python
 MASTER_SITES=	CHEESESHOP
 PKGNAMEPREFIX=	${PYTHON_PKGNAMEPREFIX}
@@ -15,27 +11,30 @@ MAINTAINER=	sbz@FreeBSD.org
 COMMENT=	Efficient arrays of booleans
 
 LICENSE=	PSFL
-LICENSE_FILE=	${WRKSRC}/LICENSE
 
 USE_PYTHON=	2.6+
-USE_PYDISTUTILS=	yes
+USE_PYDISTUTILS=easy_install
+PYEASYINSTALL_ARCHDEP=	yes
+PYEASYINSTALL_EGG=	${PYDISTUTILS_PKGNAME}-${PORTVERSION}-py${PYTHON_VER}${PYEASYINSTALL_OSARCH}.egg
 
 DOCSDIR=	${PREFIX}/share/doc/py-${PORTNAME}
 EXAMPLESDIR=	${PREFIX}/share/examples/py-${PORTNAME}
 
 PORTDOCS=	AUTHORS CHANGE_LOG LICENSE README.rst
 
+.include <bsd.port.options.mk>
+
 post-install:
-.if !defined(NOPORTDOCS)
+.if ${PORT_OPTIONS:MDOCS}
 	@${MKDIR} ${DOCSDIR}
 	${INSTALL_DATA} ${PORTDOCS:S,^,${WRKSRC}/,} ${DOCSDIR}
 .endif
-.if !defined(NOPORTEXAMPLES)
+.if ${PORT_OPTIONS:MEXAMPLES}
 	@${MKDIR} ${EXAMPLESDIR}
 	${INSTALL_DATA} ${WRKSRC}/examples/* ${EXAMPLESDIR}
 .endif
 
-regression-test:
+regression-test: extract
 	@(cd ${WRKSRC}/${PORTNAME}; ${PYTHON_CMD} -c "import ${PORTNAME}; ${PORTNAME}.test()")
 
 .include <bsd.port.mk>
