--- a/devel/p5-File-SafeDO/Makefile
+++ b/devel/p5-File-SafeDO/Makefile
@@ -1,12 +1,8 @@
-# New ports collection makefile for:	devel/p5-File-SafeDO
-# Date created:				May 28 2010
-# Whom:					Philip M. Gollucci <pgollucci@p6m7g8.com>
-#
 # $FreeBSD$
-#
 
 PORTNAME=	File-SafeDO
 PORTVERSION=	0.12
+PORTREVISION=	1
 CATEGORIES=	devel perl5
 MASTER_SITES=	CPAN
 PKGNAMEPREFIX=	p5-
