--- a/textproc/p5-DocSet/Makefile
+++ b/textproc/p5-DocSet/Makefile
@@ -1,12 +1,8 @@
-# New ports collection makefile for:	p5-DocSet
-# Date created:				2009 January 14
-# Whom:					pgollucci@FreeBSD.org
-#
 # $FreeBSD$
-#
 
 PORTNAME=	DocSet
 PORTVERSION=	0.19
+PORTREVISION=	1
 CATEGORIES=	textproc www perl5
 MASTER_SITES=	CPAN
 MASTER_SITE_SUBDIR=	CPAN:STAS
@@ -16,7 +12,7 @@ MAINTAINER=	perl@FreeBSD.org
 COMMENT=	Documentation projects builder in HTML, PS, and PDF formats
 
 BUILD_DEPENDS=	p5-Pod-POM>=0:${PORTSDIR}/textproc/p5-Pod-POM \
-				p5-Template-Toolkit>=0:${PORTSDIR}/www/p5-Template-Toolkit
+		p5-Template-Toolkit>=0:${PORTSDIR}/www/p5-Template-Toolkit
 
 MAKE_JOBS_SAFE=  yes
 
