- Update to version 1.1.0 [1] - Respect CFLAGS - Remove Author tag from pkg-descr
PR:		ports/175223 [1]
Submitted by:	Vitaly Magerya <vmagerya@gmail.com> [1]
Approved by:	maintainer timeout
Feature safe:	yes


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@315985 35697150-7ecd-e111-bb59-0022644237b5

--- a/graphics/mypaint/Makefile
+++ b/graphics/mypaint/Makefile
@@ -1,13 +1,8 @@
-# New ports collection makefile for:	mypaint
-# Date created:		12 June 2007
-# Whom:			Andrew Pantyukhin <infofarmer@FreeBSD.org>
-#
+# Created by: Andrew Pantyukhin <infofarmer@FreeBSD.org>
 # $FreeBSD$
-#
 
 PORTNAME=	mypaint
-PORTVERSION=	1.0.0
-PORTREVISION=	1
+PORTVERSION=	1.1.0
 CATEGORIES=	graphics
 MASTER_SITES=	http://download.gna.org/mypaint/ \
 		http://mirror.amdmi3.ru/distfiles/
@@ -16,7 +11,10 @@ MAINTAINER=	amdmi3@FreeBSD.org
 COMMENT=	Fast painting/scribbling program
 
 RUN_DEPENDS=	${PYTHON_SITELIBDIR}/numpy:${PORTSDIR}/math/py-numpy \
+		${PYTHON_SITELIBDIR}/cairo:${PORTSDIR}/graphics/py-cairo \
 		${PYTHON_PKGNAMEPREFIX}protobuf>0:${PORTSDIR}/devel/py-protobuf
+LIB_DEPENDS=	json:${PORTSDIR}/devel/json-c \
+		lcms2:${PORTSDIR}/graphics/lcms2
 BUILD_DEPENDS:=	${RUN_DEPENDS} \
 		swig:${PORTSDIR}/devel/swig13 \
 		protoc:${PORTSDIR}/devel/protobuf
@@ -31,9 +29,14 @@ INSTALLS_ICONS=	yes
 
 SUB_FILES=	pkg-install
 
+post-patch:
+	${REINPLACE_CMD} -e 's,<malloc.h>,<stdlib.h>,' \
+		${WRKSRC}/brushlib/operationqueue.c \
+		${WRKSRC}/brushlib/fifo.c
+	@${REINPLACE_CMD} 's|-O3||g; s|-g||g' \
+		${WRKSRC}/SConstruct
+
 post-install:
-# scons won't install icons if ${PREFIX}/share/icons already exists
-	cd ${WRKSRC}/desktop && ${COPYTREE_SHARE} 'icons' ${PREFIX}/share
 	@${SH} ${PKGINSTALL} ${PKGNAME} POST-INSTALL
 
 .include <bsd.port.mk>
